WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247888
[GStreamer] GL to raw video frame conversion fails
https://bugs.webkit.org/show_bug.cgi?id=247888
Summary
[GStreamer] GL to raw video frame conversion fails
Philippe Normand
Reported
2022-11-14 03:55:40 PST
ssia
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2022-11-14 04:00:09 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6469
EWS
Comment 2
2022-11-14 09:19:22 PST
Committed
256658@main
(33591c40287c): <
https://commits.webkit.org/256658@main
> Reviewed commits have been landed. Closing PR #6469 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-11-14 09:20:19 PST
<
rdar://problem/102324009
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug