[GStreamer] GL to raw video frame conversion fails https://bugs.webkit.org/show_bug.cgi?id=247888

Reviewed by Žan Doberšek.

The gstglcolorconvert facilities only support GL to GL conversion, so for a GL to sysmem conversion
we now use the non GL converter, which is mapping GL frames implicitely with glBindBuffer.

* Source/WebCore/platform/graphics/gstreamer/VideoFrameGStreamer.cpp:
(WebCore::ensureDebugCategoryInitialized):
(WebCore::GstSampleColorConverter::singleton):
(WebCore::GstSampleColorConverter::convertSample):
(WebCore::VideoFrameGStreamer::VideoFrameGStreamer):

Canonical link: https://commits.webkit.org/256658@main